--- a/src/main/resources/assets/magicsword/lang/en_us.json
+++ b/src/main/resources/assets/magicsword/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.magicsword.magisches_ore_block": "Magisches Ore Block",
   "block.magicsword.deepslate_magisches_ore_block": "Deepslate Magisches Ore Block",
+  "block.magicsword.alchemy_table": "Alchemy Table",
 
   "itemGroup.magicsword.magicsword": "Magisches Sword Material",
 
